# cei-mvp

./: .env  .env.example  .gitattributes  .gitignore  IMPROVEMENTS.txt  README.md  alerts168.json  alerts24.json  check_ingest.py  docker-compose.yml  docker-compose.yml.bak  export_timeseries.ps1  generate_test_timeseries_csvs.py  index.html  load-env.ps1  package-lock.json  package.json  package.json.bak  render.yaml  static.json  tailwind.config.js  test.csv  test_A_normal.csv  test_B_Night_waste.csv  test_db_connection.py  tmp-vjs.js  vercel-index.html  vercel.json  vercel_index.css  vercel_index.html  vercel_index.js  vite.config.ts
frontend/: .env  .env.bak  .gitignore  Procfile  README.md  eslint.config.cjs  index.html  notepad fix_final.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.mjs  static.json  tsconfig.json  vercel.json  vercel_root.html  vite.config.ts
frontend/alembic/: env.py
frontend/config/: nginx.conf.erb
frontend/frontend/src/: App.tsx  app.jsx  index.css
frontend/public/: CEI_Commercialista_Playbook_EN.docx  sw.js
frontend/scripts/: seed_sample_data.py
frontend/src/: App.jsx  App.tsx  app.jsx  i18n.ts  main.tsx
frontend/src/components/: AlertHistoryPanel.tsx  Card.tsx  ComplianceReports.tsx  ConnectConsultant.tsx  ErrorBanner.tsx  FormField.tsx  Header.tsx  HealthIndicator.tsx  IngestHealthCard.tsx  KpiCard.tsx  LanguageToggle.tsx  LinkRequestsPanel.tsx  LiveIndicator.tsx  LoadingSpinner.tsx  Modal.tsx  NotificationBell.tsx  OpportunityCard.tsx  PageHeader.tsx  PortfolioTrendChart.tsx  PricingCards.tsx  (+13 more)
(+286 files in other folders)
